# Pos_System

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.spec  prueba.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test_and_build.yaml
doc/: example.md  example.txt  main.spec.md
pos/: __init__.py  main.py  ui_mod.py
pos/core/: inventario.py  logging_config.py  productos.py
pos/db/: conect.py
pos/modulos/: ventas.py  ventas.ui
pos/modulos_ui/: setup_ui.py  ventas.py  ventas.ui  ventas_ui.py
pos/modulos_ui/ventas/: ventas.ui  ventas_ui.py  ventas_view.py
pos/modulos_ui/ventas/mini_buscador/: buscador.ui  buscador_ui.py
scripts/: uv_installer.py
src/: main.py  ui_draw.py
src/core/: inventario.py  productos.py
src/db/: conect.py
src/modulos/: ui_draw.py  ui_ventas.py
src/modulos/sub_ventanas/: mini_inventario.py
tests/: test_conect.py  test_inventario.py  test_ventas_view.py
utils/calculadora/: CMakeLists.txt
utils/calculadora/src/: calculadora.cpp  calculadora.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
utils/calculadora/src/gui/: calculadora.ui  ui_mainwindow.hpp
